<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BudivelniSumishActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/cement_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bud_sumishi_first_button"
        android:textSize="@android:dimen/app_icon_size"
        android:background="@color/material200Green"
        android:layout_marginTop="20dp"
        >

    </Button>

    <Button
        android:id="@+id/satengips_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bud_sumishi_second_button"
        android:textSize="@android:dimen/app_icon_size"
        android:background="@color/material200Green"
        android:layout_marginTop="20dp"

        >

    </Button>
    <Button
        android:id="@+id/kley_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bud_sumishi_third_button"
        android:textSize="@android:dimen/app_icon_size"
        android:background="@color/material200Green"
        android:layout_marginTop="20dp"

        >

    </Button>

</LinearLayout>