<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/Kv_metr"
            android:textSize="30sp"
            android:textColor="#0000FF"
            />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:columnCount="2"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:rowCount="3">


        <android.support.v7.widget.CardView
            android:id="@+id/first_page_card_view_1"

            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            >


             <ImageView
                 android:id="@+id/first_image_1"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
                 android:src="@drawable/remont2"
                 >

             </ImageView>

                <TextView
                    android:id="@+id/first_text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/first_text_1"
                    android:textColor="#1E90FF"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="60dp"
                    android:layout_marginLeft="5dp"

                    >

                </TextView>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">


            <ImageView
                android:id="@+id/first_image_2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/perferator"
                >

            </ImageView>

            <TextView
                android:id="@+id/first_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_text_2"
                android:textColor="#1E90FF"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"

                >

            </TextView>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" >

            <ImageView
                android:id="@+id/first_image_3"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/santehnica"
                >

            </ImageView>

            <TextView
                android:id="@+id/first_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_text_3"
                android:textColor="#1E90FF"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"

                >

            </TextView>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"

            >

            <ImageView
                android:id="@+id/first_image_4"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/instrumenty"
                >

            </ImageView>

            <TextView
                android:id="@+id/first_text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_text_4"
                android:textColor="#1E90FF"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"

                >

            </TextView>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"

            >

            <ImageView
                android:id="@+id/first_image_5"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/budsumishi"
                >

            </ImageView>

            <TextView
                android:id="@+id/first_text_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_text_5"
                android:textColor="#1E90FF"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"

                >

            </TextView>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="160dp"

            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp" >

            <ImageView
                android:id="@+id/first_image_6"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/sadgorod"
                >

            </ImageView>

            <TextView
                android:id="@+id/first_text_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/first_text_6"
                android:textColor="#1E90FF"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"

                >

            </TextView>

        </android.support.v7.widget.CardView>
        <!--        <android.support.v7.widget.CardView-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:background="@color/material100Green"-->
        <!--            />-->

        <!--        <android.support.v7.widget.CardView-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:background="@color/material100Green"-->
        <!--            />-->

        <!--    <android.support.v7.widget.CardView-->
        <!--        android:layout_gravity="center_vertical"-->
        <!--        android:background="@color/material100Green"-->
        <!--        />-->


        <!--    <android.support.v7.widget.CardView-->
        <!--        android:layout_gravity="center_vertical"-->
        <!--        android:background="@color/material100Green"-->
        <!--        />-->

    </GridLayout>


</LinearLayout>